# claude-playground

./: .gitignore  CLAUDE.md
.claude/: settings.json.bak
.claude/agents/: test-agent.md
.devcontainer/: Dockerfile  devcontainer.json
skills/fix-vulnerabilities/setup/: init.sh  trivy-cache-pvc.yaml  values.yaml
skills/fix-vulnerabilities/vul-functions/: conftest.py  pyproject.toml
skills/fix-vulnerabilities/vul-functions/.devcontainer/: Dockerfile  Dockerfile.base  Dockerfile.cloud  Dockerfile.go  README.md  buildkitd.toml  devcontainer.json  dind-entrypoint.sh  docker-compose.yml  init-copilot.sh  post-start.sh  test.sh
skills/fix-vulnerabilities/vul-functions/src/vul_functions/: __init__.py  registry.py  trivy.py
skills/fix-vulnerabilities/vul-functions/tests/: test_hello_world.py  test_registry.py  test_trivy.py
