[project]
name = "vul_functions"
version = "0.1.0"
description = "Python functions used by ix vulnerabilities skill"
readme = "README.md"
authors = [
    { name = "tom1299", email = "tom1299@jeeatwork.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
