[project]
name = "vul_functions"
version = "0.1.0"
description = "Python functions used by fix-vulnerabilities skill"
readme = "README.md"
authors = [
    { name = "tom1299", email = "tom1299@jeeatwork.com" }
]
requires-python = ">=3.11"
dependencies = [
    "kubernetes>=35.0.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-dependency>=0.6.1",
]

[tool.pytest.ini_options]
markers = [
    "dependency: mark test dependencies (honored only with --with-dependencies flag)",
]

[tool.uv]
python-preference = "only-system"
